[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/todot/assets/Remove.svg" type="Texture" id=2]
[ext_resource path="res://addons/todot/assets/ArrowUp.svg" type="Texture" id=3]
[ext_resource path="res://addons/todot/ListItem.gd" type="Script" id=4]
[ext_resource path="res://addons/todot/assets/GuiTabMenuHl.svg" type="Texture" id=5]
[ext_resource path="res://addons/todot/assets/ArrowDown.svg" type="Texture" id=6]

[node name="List" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 24.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveUp" type="ToolButton" parent="."]
margin_right = 28.0
margin_bottom = 24.0
icon = ExtResource( 3 )

[node name="MoveDown" type="ToolButton" parent="."]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 24.0
icon = ExtResource( 6 )

[node name="ListName" type="LineEdit" parent="."]
margin_left = 64.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="MenuButton" parent="."]
margin_left = 322.0
margin_right = 350.0
margin_bottom = 24.0
focus_mode = 2
icon = ExtResource( 5 )
items = [ "Delete", ExtResource( 2 ), 0, false, false, 0, 0, null, "", false ]

[connection signal="pressed" from="MoveUp" to="." method="move_up"]
[connection signal="pressed" from="MoveDown" to="." method="move_down"]
[connection signal="text_changed" from="ListName" to="." method="rename_list"]
